added save route docs news service
